# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-hnsw"
version = "0.6.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "HNSW approximate nearest-neighbor graph index for fast vector search - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "hnsw",
    "vector-search",
    "nearest-neighbor",
    "ann",
    "iqdb"
]

# Categories
categories = [
    "algorithms",
    "data-structures"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-hnsw"
repository    = "https://github.com/jamesgober/iqdb-hnsw"
documentation = "https://docs.rs/iqdb-hnsw"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_hnsw"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
# No feature flags. HNSW construction is single-writer-internal (the engine
# guards each index with an external lock), so there is no parallel toggle, and
# persistence is the separate `iqdb-persist` crate's job. The default build is
# the whole surface.
[features]
default = []


# DEPENDENCIES
# #################################
[dependencies]
# Shared iQDB vocabulary: VectorId, Metadata, Hit, SearchParams, DistanceMetric, IqdbError.
iqdb-types    = "1.0.0"
# The five distance kernels (SIMD where the target allows it); HNSW delegates all
# metric math to `compute_batch` and never reimplements a metric.
iqdb-distance = "1.0.0"
# The Index / IndexCore traits this crate implements.
iqdb-index    = "1.0.0"
# Metadata post-filter evaluation during traversal.
iqdb-filter   = "1.0.0"


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"


# BENCHMARKS
# #################################
[[bench]]
name    = "hnsw_bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
